(feat) added a functionality that gets event data based on the teacher's ID
